Have a hard bug, fixing

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-API_KEY: AIzaSyBdkuV_fPw4G-VU3-4vDicvI7Dre67ekzo
-AUTH_DOMAIN: devit-id.firebaseapp.com
-DATABASE_URL: https://devit-id.firebaseio.com
-PROJECT_ID: devit-id
-STORAGE_BUCKET: devit-id.appspot.com
-MESSAGING_SENDER_ID: 301573806125
-APP_ID: 1:301573806125:web:0be7e4b2c8a2f5f7f840a4
-MEASUREMENT_ID: G-FKL6DZWLSZ
+API_KEY=AIzaSyBdkuV_fPw4G-VU3-4vDicvI7Dre67ekzo
+AUTH_DOMAIN=devit-id.firebaseapp.com
+DATABASE_URL=https://devit-id.firebaseio.com
+PROJECT_ID=devit-id
+STORAGE_BUCKET=devit-id.appspot.com
+MESSAGING_SENDER_ID=301573806125
+APP_ID=1:1:301573806125:web:0be7e4b2c8a2f5f7f840a4
+MEASUREMENT_ID=G-FKL6DZWLSZ
